2010-11-12  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (diary-iso-date-forms): Make elements
	mutually exclusive.  (Bug#7377)

2010-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-prec2->grammar): Obey equality constraints
	when filling the remaining "unconstrained" values.

2010-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-warnings): Simplify the
	safety predicate.

	* files.el (safe-local-variable-p): Gracefully handle errors.

	* emacs-lisp/smie.el (smie-rule-parent, smie-indent--rule):
	Use smie-indent-virtual when indenting relative to an opener.
	(smie-rule-separator): Use smie-rule-parent.
	(smie-indent-keyword): Consult rules, even for openers at bol.
	(smie-indent-comment-close): Try to align closer's content.

2010-11-11  Glenn Morris  <rgm@gnu.org>

	* ls-lisp.el (ls-lisp-dired-ignore-case): Make it an obsolete alias.

2010-11-10  Glenn Morris  <rgm@gnu.org>

	* printing.el (pr-menu-bind): Doc fix.

	* speedbar.el (speedbar-toggle-images): Doc fix.

	* progmodes/python.el (python-shell): Doc fix.

	* wid-edit.el (widget-field-use-before-change)
	(widget-use-overlay-change): Doc fixes.

2010-11-09  Glenn Morris  <rgm@gnu.org>

	* progmodes/tcl.el (tcl-hairy-scan-for-comment): Doc fix.

2010-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-help): Specify the end of the
	completion field (bug#7211).

	* progmodes/python.el (python-font-lock-syntactic-keywords): (bug#7322)
	Fix handling of backslash escapes.
	(python-quote-syntax): Adjust accordingly.

2010-11-08  Richard Levitte  <richard@levitte.org>  (tiny change)

	* vc-mtn.el (vc-mtn-working-revision, vc-mtn-after-dir-status)
	(vc-mtn-workfile-branch): Adjust to new output format.

2010-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (princ-list): Mark as obsolete.

2010-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>
